--- a/views/index.jade
+++ b/views/index.jade
@@ -4,3 +4,4 @@ block content
     h1= title
         p Welcome to #{title}
         a(class="button", href="/signup") 회원가입
+        p DB time - #{db_time}
